# galloc

./: Cargo.toml  README.md  allocator_graphs.py
benchmark_results/: alloc_dealloc.csv  alloc_until_full_then_dealloc.csv  heap_exhaustion.csv  push_to_vec.csv  push_to_vec_and_alloc_between_each_push.csv  random_actions.csv
examples/: allocator_benchmarks.rs  benchmark.rs  simple_chunk_allocator_benchmark.rs
examples/benchmarks/: mod.rs
src/: alignment.rs  alloc_tests.rs  bins.rs  chunks.rs  divisible_by_4_usize.rs  lib.rs  main.rs  smallest_type_which_has_at_least_n_bits.rs
src/tests/: alloc_tests.rs  dealloc_tests.rs  mod.rs
